# Practica4-Compiladores

./: Makefile  README.md  lol.lol  meson.build  new.txt
include/: tabla.h  table.h
src/: lex.l  looli.y  main.c  tabla.c  table.c
